# Recruitment-platform

./: .gitignore  README.md  pyproject.toml
backend/: manage.py  start.sh
backend/apps/core/: admin.py  models.py  views.py
backend/apps/core/migrations/: 0001_initial.py
backend/apps/core/tests/: test_auth.py  test_models.py
backend/apps/jobPost/: apps.py
backend/apps/user/: serializers.py  urls.py  views.py
backend/apps/user/tests/: test_user_private_apis.py  test_user_public_apis.py
backend/recruitment_platform/: asgi.py  settings.py  urls.py  wsgi.py
frontend/: index.html  package-lock.json  package.json  vite.config.js  vue.config.js
frontend/src/: App.jsx  index.css
frontend/src/assets/: assets.js
frontend/src/components/AuthForm/: AuthForm.css  AuthForm.jsx  SignInForm.jsx  SignUpForm.jsx
frontend/src/components/Header/: Header.jsx
frontend/src/components/Login/: Login.css  Login.jsx
frontend/src/components/SideDrawer/: SideDrawer.jsx
frontend/src/components/Tables/: DataTable.jsx
frontend/src/layouts/: RootLayout.jsx
frontend/src/pages/Auth/: AuthForm.css  AuthForm.jsx
frontend/src/pages/Dashboard/: Dashboard.jsx
frontend/src/pages/JobBoard/: JobBoard.css  index.jsx
frontend/src/pages/PageNotFound/: PageNotFound.jsx
frontend/src/pages/Settings/: Settings.css  Settings.jsx
frontend/src/routes/: ProtectedRoute.jsx  PublicRoute.jsx  router.jsx  routesConfig.js
frontend/src/services/: api.js  apiRoutes.js  apiWrapper.js  errorHandlers.js
frontend/src/services/auth/: signIn.js  signUp.js
frontend/src/utils/: authTokens.js
(+7 files in other folders)
